# headmatch

./: .gitignore  BACKLOG.md  CHANGELOG.md  LEGAL.md  MANIFEST.in  README.md  headmatch.spec  pyproject.toml  requirements-test.txt  requirements.txt
.autonomy/: BACKLOG.md  CURRENT_TASK.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  integration.yml  package-build.yml  pypi-publish.yml  pytest.yml  release-binary.yml  (+2 more)
docs/: architecture.md  assignments.md  backlog.md  confidence-scoring.md  product_pages.md  room-measurement.md
headmatch/: __init__.py  ab_compare.py  analysis.py  apo_import.py  apo_refine.py  app_identity.py  audio_backend.py  backend_pipewire.py  backend_portaudio.py  batch.py  builtin_targets.py  cli.py  contracts.py  desktop.py  eq_clipping.py  exceptions.py  exporters.py  gui.py  gui_views.py  headphone_db.py  hearing_test.py  history.py  io_utils.py  measure.py  mic_cal.py  paths.py  peq.py  pipeline.py  pipeline_artifacts.py  pipeline_confidence.py  plots.py  room.py  settings.py  signals.py  target_editor.py  targets.py  troubleshooting.py  tui.py
scripts/: build.py  entry_cli.py  entry_gui.py
tests/: config_fixtures.py  conftest.py  test_ab_compare.py  test_ab_compare_coverage.py  test_adaptive_depth.py  test_analysis.py  test_analysis_coverage.py  test_apo_import.py  test_apo_import_coverage.py  test_apo_refine.py  test_app_identity_coverage.py  test_audio_backend.py  test_backend_pipewire.py  test_backend_portaudio.py  test_batch.py  test_batch_coverage.py  test_biquad_coefficients.py  test_builtin_targets.py  test_builtin_targets_coverage.py  test_cli.py  test_cli_coverage.py  test_cli_errors.py  test_cli_room_commands.py  test_cli_shortcuts.py  test_clone_target_examples.py  test_contracts.py  test_contracts_aliases.py  test_desktop.py  test_desktop_coverage.py  test_e2e_apo_roundtrip.py  test_e2e_batch.py  test_e2e_compare.py  test_e2e_fitting.py  test_e2e_hearing_chain.py  test_e2e_offline_workflow.py  test_eq_clipping.py  test_exceptions.py  test_exporters_coverage.py  test_gui.py  test_gui_controllers.py  (+59 more)
(+204 files in other folders)
