[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headmatch"
dynamic = ["version"]
description = "PipeWire headphone measurement, EQ fitting, and headphone cloning toolkit"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "soundfile",
  "PyYAML",
]

[project.scripts]
headmatch = "headmatch.cli:main"
headmatch-tui = "headmatch.tui:main"
headmatch-gui = "headmatch.gui:main"

[tool.setuptools.dynamic]
version = {attr = "headmatch.__version__"}
