[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headmatch"
dynamic = ["version"]
description = "Headphone measurement, EQ fitting, and headphone cloning toolkit"
requires-python = ">=3.10"
dependencies = [
  "numpy<2.4",
  "scipy",
  "soundfile",
  "PyYAML",
]

[project.scripts]
headmatch = "headmatch.cli:main"
headmatch-tui = "headmatch.tui:main"
headmatch-gui = "headmatch.gui:main"

[project.optional-dependencies]
portaudio = ["sounddevice>=0.4"]

[tool.setuptools.dynamic]
version = {attr = "headmatch.__version__"}

[tool.setuptools.packages.find]
include = ["headmatch*"]
exclude = ["tests*"]
